# iw-generator

./: .gitignore  AGENTS.md  PLAN.md  README.md  index.html  iw.config.blog.toml  iw.config.doc.toml  iw.config.iw.toml  iw.config.toml  main.py  postList.json  pyproject.toml  rss.xml  search_index.json
.github/workflows/: deploy-doc.yml  deploy-themes.yml
about/: index.html
blog-content/: building-ssg.md  code-highlight-demo.md  hello-world.md
code-highlight-test/: index.html
docs/: CSS_CONVENTION.md  Hello World! @#$%.md  about.md  code-highlight-test.md  index.md  中文测试.md  测试 (1).md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guide/: config.md  content.md  index.md
docs/plugins/: index.md  writing.md
e4b8ad-e69687-e6b58b-e8af95/: index.html
e6b58b-e8af95-1/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/config/: index.html
guide/content/: index.html
hello-world/: index.html
plugins/: index.html
plugins/writing/: index.html
scripts/: build_icons_cache.py  copy_material_icons.py
src/iw_generator/: __init__.py  __main__.py  cli.py
src/iw_generator/core/: config.py  engine.py  file.py  jinja.py  markdown.py  paths.py  plugin.py  utils.py
src/iw_generator/plugins/: github_issues.py  highlight.py  rss.py  search.py  sitemap.py  toc.py
src/iw_generator/themes/: icons.json  icons.py
src/iw_generator/themes/blog/: hooks.py  theme.toml
src/iw_generator/themes/doc/: hooks.py  theme.toml
src/iw_generator/themes/iw/: theme.toml
test_site/: iw.config.toml
test_site/content/: api.md  index.md
test_site/content/getting-started/: index.md  installation.md
test_site/content/guide/: advanced.md  index.md
test_site/site/: api.html  index.html  search_index.json
test_site/site/getting-started/: index.html  installation.html
test_site/site/guide/: advanced.html  index.html
tests/: test_core.py
(+61 files in other folders)
