[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iw-generator"
version = "0.1.0"
description = "A general-purpose Markdown static site generator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "jinja2>=3.1",
    "click>=8.0",
    "rich>=13.0",
    "pygments>=2.17",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.4",
]

[project.scripts]
iw = "iw_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iw_generator"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
