[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iw-generator"
version = "0.1.0"
description = "A general-purpose Markdown static site generator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.5",
    "pymdown-extensions>=10.0",
    "jinja2>=3.1",
    "click>=8.0",
    "rich>=13.0",
    "pygments>=2.17",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
iw = "iw_generator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iw_generator"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/iw_generator/themes/iw/icons.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
